<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/set_active_profile"
        style="@style/CocoPopupRow"
        android:text="@string/routing_profile_set_active" />

    <TextView
        android:id="@+id/edit_profile"
        style="@style/CocoPopupRow"
        android:text="@string/action_edit" />

    <TextView
        android:id="@+id/duplicate_profile"
        style="@style/CocoPopupRow"
        android:text="@string/routing_profile_duplicate" />

    <TextView
        android:id="@+id/delete_profile"
        style="@style/CocoPopupRow"
        android:text="@string/routing_profile_delete" />
</LinearLayout>
